<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MenuMainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:textAlignment="center"
        android:textAllCaps="true" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button13"
            style="@style/boton_menu_oscuro"
            android:onClick="goToFormularios"
            android:text="@string/menu_option1"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button14"
            style="@style/boton_menu_oscuro"
            android:onClick="goToEstadosForm"
            android:text="@string/menu_option2"
            app:cornerRadius="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button15"
            style="@style/boton_menu_claro"
            android:onClick="goToPerfil"
            android:text="@string/menu_option3"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonSalirApp"
            style="@style/boton_menu_claro"
            android:onClick="salir"
            android:text="@string/menu_option4"
            app:cornerRadius="10dp" />
    </TableRow>

</LinearLayout>